# ktt-shopsystem

./: Cargo.toml  README.md
.github/actions/: container-build
.github/workflows/: ci.yml
data/config/: config.ini
data/sounds/system/: error.opus  shutdown.opus  startup.opus
data/sounds/user/beep/error/: buzzer.opus
data/sounds/user/beep/login/: toycaralarm.opus
data/sounds/user/beep/logout/: cha ching.opus
data/sounds/user/beep/purchase/: beep.opus  camera.opus
data/sounds/user/dude/error/: I broke something.opus
data/sounds/user/dude/login/: hey dude, whats up man.opus
data/sounds/user/dude/logout/: bye.opus
data/sounds/user/dude/purchase/: yeah man.opus
data/sounds/user/girlfriend/error/: no, no, forget it.opus
data/sounds/user/girlfriend/login/: hello.opus  we need to talk about this.opus
data/sounds/user/girlfriend/logout/: get out, get outta here.opus  i dont have time for this.opus  why dont you just leave then.opus
data/sounds/user/girlfriend/purchase/: code accepted.opus  yeah so what.opus
data/sounds/user/japanese/error/: no, iie.opus  sumimasen.opus
data/sounds/user/japanese/login/: hello.opus
data/sounds/user/japanese/logout/: goodbye.opus
data/sounds/user/japanese/purchase/: domo-arigato.opus  domo.opus
data/sounds/user/robot/error/: critical error.opus
data/sounds/user/robot/login/: login accepted.opus
data/sounds/user/robot/logout/: terminating.opus
data/sounds/user/robot/purchase/: accepted.opus
data/sounds/user/sexy/error/: error.opus
data/sounds/user/sexy/login/: welcome back sexy bitch.opus
data/sounds/user/sexy/logout/: well if thats how you feel.opus  what about me.opus
data/sounds/user/sexy/purchase/: do it again.opus  what is next.opus  yes, master.opus  your will is my command.opus
data/sql/: tables.sql
debian/: ktt-shopsystem-frontend.service  ktt-shopsystem-mail-backup.service  ktt-shopsystem-mail-daily-invoice.service  ktt-shopsystem-mail-monthly-invoice.service  ktt-shopsystem-web.service
debian/dbus-config/: io.mainframe.shopsystem.Mailer.conf
debian/dbus-services/: io.mainframe.shopsystem.AudioPlayer.service  io.mainframe.shopsystem.Config.service  io.mainframe.shopsystem.Database.service  io.mainframe.shopsystem.InvoicePDF.service  io.mainframe.shopsystem.Mail.service  io.mainframe.shopsystem.Mailer.service  io.mainframe.shopsystem.PGP.service
docker/: Dockerfile  README.md  init.sh  tmux-config
templates/: base.html.tera  error.html.tera  index.html.tera  login.html.tera  logout.html.tera  menu.html.tera  test.html.tera  wrong-password.html.tera
templates/aliases/: index.html.tera
templates/cashbox/: details.html.tera  index.html.tera
templates/products/: bestbefore.html.tera  details.html.tera  index.html.tera  inventory.html.tera  missing.html.tera  new.html.tera  restock.html.tera
templates/sales/: index.html.tera
templates/static/css/: style.css
templates/static/js/: darkmode.js  helper.js
templates/suppliers/: index.html.tera  new.html.tera  order-suggestion-selection.html.tera  order-suggestion.html.tera
templates/users/: import-pgp-upload.html.tera  import-pgp.html.tera  import.html.tera  import2.html.tera  index.html.tera  info.html.tera  invoice.html.tera  stats.html.tera
