[package]
publish = false
name = "ktt-shopsystem"
version = "0.1.0"
edition = "2021"
license = "ISC"
authors = ["Sebastian Reichel <sre@mainframe.io>"]
homepage = "https://github.com/ktt-ol/ktt-shopsystem/"
description = "KtT Shopsystem"
readme = "README.md"

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rocket_dyn_templates = { version = "0.1.0-rc.4", features = ["tera"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
zbus = { version = "3", default-features = false, features = ["tokio"] }
rand = { version = "0.8" }
chrono = { version = "0.4", features = ["serde"] }
csv = { version = "1.3" }
gstreamer = { version = "0.21" }
configparser = { version = "3.0" }
r2d2_sqlite = { version = "0.23.0", features = ["bundled"] }
r2d2 = { version = "0.8.10" }
sha2 = { version = "0.10" }
hex = { version = "0.4" }
cairo-rs = { version = "0.18" , features = ["pdf"] }
pango = { version = "0.18" }
pangocairo = { version = "0.18" }
gio = { version = "0.18" }
regex = { version = "1.10" }
librsvg = { version = "2.57" }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "rustls-tls", "tokio1-rustls-tls"] }
clap = { version = "4", features = ["derive"] }
gpgme = { version = "0.11" }
compress-tools = { version = "0.14" }
tui = { version = "0.19" }
crossterm = { version = "0.27" }
async-recursion = { version = "1.0" }
textwrap = { version = "0.16" }
barcoders = { version = "1.0", features = ["svg"] }
unicode-segmentation = { version = "1.10.1" }

[package.metadata.deb]
maintainer = "Sebastian Reichel <sre@mainframe.io>"
copyright = "2023, Sebastian Reichel <sre@mainframe.io>"
extended-description = """\
The software has been developed as a credit based system for members of the
hackspace. The system depends on a USB HID barcode scanner, which is used
to establish user sessions (by scanning CODE39 based user codes) and buying
products (by scanning their EAN). The members receive an invoice at the end of
the month, which is also send to the hackspace's treasurer for further processing."""
depends = "$auto"
section = "misc"
priority = "optional"
maintainer-scripts = "debian/"
assets = [
    ["target/release/audio", "usr/bin/ktt-shopsystem-audio", "755"],
    ["target/release/backup", "usr/bin/ktt-shopsystem-backup", "755"],
    ["target/release/database", "usr/bin/ktt-shopsystem-database", "755"],
    ["target/release/frontend", "usr/bin/ktt-shopsystem-frontend", "755"],
    ["target/release/invoice", "usr/bin/ktt-shopsystem-invoice", "755"],
    ["target/release/mailer", "usr/bin/ktt-shopsystem-mailer", "755"],
    ["target/release/pdf-invoice", "usr/bin/ktt-shopsystem-pdf-invoice", "755"],
    ["target/release/pgp", "usr/bin/ktt-shopsystem-pgp", "755"],
    ["target/release/web", "usr/bin/ktt-shopsystem-web", "755"],
    ["README.md", "usr/share/doc/ktt-shopsystem/README", "644"],
    ["debian/dbus-config/*", "usr/share/dbus-1/system.d/", "644"],
    ["debian/dbus-services/*", "usr/share/dbus-1/system-services/", "644"],
    ["data/config/*", "etc/shopsystem/", "644"],
    ["data/invoice/*", "usr/share/shopsystem/invoice/", "644"],
    ["data/sql/*", "usr/share/shopsystem/sql/", "644"],
	# audio player sounds
    ["data/sounds/system/*.ogg", "usr/share/shopsystem/sounds/system/", "644"],
	["data/sounds/user/beep/error/*.ogg", "usr/share/shopsystem/sounds/user/beep/error/", "644"],
	["data/sounds/user/beep/login/*.ogg", "usr/share/shopsystem/sounds/user/beep/login/", "644"],
	["data/sounds/user/beep/logout/*.ogg", "usr/share/shopsystem/sounds/user/beep/logout/", "644"],
	["data/sounds/user/beep/purchase/*.ogg", "usr/share/shopsystem/sounds/user/beep/purchase/", "644"],
	["data/sounds/user/dude/error/*.ogg", "usr/share/shopsystem/sounds/user/dude/error/", "644"],
	["data/sounds/user/dude/login/*.ogg", "usr/share/shopsystem/sounds/user/dude/login/", "644"],
	["data/sounds/user/dude/logout/*.ogg", "usr/share/shopsystem/sounds/user/dude/logout/", "644"],
	["data/sounds/user/dude/purchase/*.ogg", "usr/share/shopsystem/sounds/user/dude/purchase/", "644"],
	["data/sounds/user/girlfriend/error/*.ogg", "usr/share/shopsystem/sounds/user/girlfriend/error/", "644"],
	["data/sounds/user/girlfriend/login/*.ogg", "usr/share/shopsystem/sounds/user/girlfriend/login/", "644"],
	["data/sounds/user/girlfriend/logout/*.ogg", "usr/share/shopsystem/sounds/user/girlfriend/logout/", "644"],
	["data/sounds/user/girlfriend/purchase/*.ogg", "usr/share/shopsystem/sounds/user/girlfriend/purchase/", "644"],
	["data/sounds/user/japanese/error/*.ogg", "usr/share/shopsystem/sounds/user/japanese/error/", "644"],
	["data/sounds/user/japanese/login/*.ogg", "usr/share/shopsystem/sounds/user/japanese/login/", "644"],
	["data/sounds/user/japanese/logout/*.ogg", "usr/share/shopsystem/sounds/user/japanese/logout/", "644"],
	["data/sounds/user/japanese/purchase/*.ogg", "usr/share/shopsystem/sounds/user/japanese/purchase/", "644"],
	["data/sounds/user/robot/error/*.ogg", "usr/share/shopsystem/sounds/user/robot/error/", "644"],
	["data/sounds/user/robot/login/*.ogg", "usr/share/shopsystem/sounds/user/robot/login/", "644"],
	["data/sounds/user/robot/logout/*.ogg", "usr/share/shopsystem/sounds/user/robot/logout/", "644"],
	["data/sounds/user/robot/purchase/*.ogg", "usr/share/shopsystem/sounds/user/robot/purchase/", "644"],
	["data/sounds/user/sexy/error/*.ogg", "usr/share/shopsystem/sounds/user/sexy/error/", "644"],
	["data/sounds/user/sexy/login/*.ogg", "usr/share/shopsystem/sounds/user/sexy/login/", "644"],
	["data/sounds/user/sexy/logout/*.ogg", "usr/share/shopsystem/sounds/user/sexy/logout/", "644"],
	["data/sounds/user/sexy/purchase/*.ogg", "usr/share/shopsystem/sounds/user/sexy/purchase/", "644"],
	# web templates
	["templates/*", "usr/share/shopsystem/templates/", "644"],
	["templates/aliases/*", "usr/share/shopsystem/templates/aliases/", "644"],
	["templates/cashbox/*", "usr/share/shopsystem/templates/cashbox/", "644"],
	["templates/products/*", "usr/share/shopsystem/templates/products/", "644"],
	["templates/suppliers/*", "usr/share/shopsystem/templates/suppliers/", "644"],
	["templates/users/*", "usr/share/shopsystem/templates/users/", "644"],
	["templates/static/css/*", "usr/share/shopsystem/templates/static/css/", "644"],
	["templates/static/css/fonts/*", "usr/share/shopsystem/templates/static/css/fonts/", "644"],
	["templates/static/js/*", "usr/share/shopsystem/templates/static/js/", "644"],
]
systemd-units = [
        { unit-name = "ktt-shopsystem-web", enable = false },
        { unit-name = "ktt-shopsystem-frontend", enable = false },
        { unit-name = "ktt-shopsystem-mail-backup", enable = false },
        { unit-name = "ktt-shopsystem-mail-daily-invoice", enable = false },
        { unit-name = "ktt-shopsystem-mail-monthly-invoice", enable = false },
]
